# unqlite_flutter

./: .gitignore  README.md
android/: .gitignore  README.md  gradle.properties  settings.gradle
android/app/src/main/java/xyz/bczl/unqlite/: MainActivity.java
android/app/src/main/res/values/: strings.xml  themes.xml
build_tool/: CMakeLists.txt  build.bat  build.py  config.c
unqlite/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
unqlite/android/app/: build.gradle
unqlite/android/app/src/main/: AndroidManifest.xml
unqlite/android/app/src/main/cpp/: CMakeLists.txt  unqlite.c
unqlite/android/app/src/main/res/values-night/: themes.xml
unqlite/android/gradle/wrapper/: gradle-wrapper.properties
unqlite/example/: unqlite_example.dart
unqlite/lib/: unqlite.dart
unqlite/lib/src/: cursor_iterator.dart  internal.dart  jx9_script.dart  unqlite_base.dart  unqlite_bindings.dart
unqlite/test/: unqlite_test.dart
unqlite_flutter/: CHANGELOG.md  README.md  pubspec.yaml
unqlite_flutter/android/: build.gradle  settings.gradle
unqlite_flutter/android/src/main/: AndroidManifest.xml
unqlite_flutter/android/src/main/java/xyz/bczl/unqlite_flutter/: UnqliteFlutter.java  UnqliteFlutterPlugin.java
unqlite_flutter/example/: README.md  pubspec.yaml
unqlite_flutter/example/android/app/: build.gradle
unqlite_flutter/example/android/app/src/debug/: AndroidManifest.xml
unqlite_flutter/example/android/app/src/main/: AndroidManifest.xml
unqlite_flutter/example/android/app/src/main/java/xyz/bczl/example/: MainActivity.java
unqlite_flutter/example/android/app/src/main/java/xyz/bczl/unqlite_flutter_example/: MainActivity.java
unqlite_flutter/example/ios/Runner/: Info.plist
unqlite_flutter/example/ios/Runner.xcodeproj/: project.pbxproj
unqlite_flutter/example/lib/: main.dart
unqlite_flutter/example/test/: widget_test.dart
unqlite_flutter/ios/: unqlite_flutter.podspec
unqlite_flutter/ios/Classes/: UnqliteFlutter.h  UnqliteFlutter.m  UnqliteFlutterPlugin.h  UnqliteFlutterPlugin.m
unqlite_flutter/ios/unqlite.framework/: Info.plist  unqlite
unqlite_flutter/lib/: unqlite.dart
unqlite_flutter/lib/src/: unqlite_bindings.dart  unqlite_helper.dart
unqlite_flutter/test/: unqlite_flutter_test.dart
